connects server api to the client

--- a/client/app/views/movies.html
+++ b/client/app/views/movies.html
@@ -4,7 +4,7 @@
     <th>URL</th>
   </thead>
   <tbody>
-    <tr ng-repeat="movie in movieInfo">
+    <tr ng-repeat="movie in movies">
       <td>{{ movie.title }}</td>
       <td>{{ movie.url }}</td>
     </tr>
