adds code for CRUD operations

--- a/client/app/views/movie-delete.html
+++ b/client/app/views/movie-delete.html
@@ -1,1 +1,7 @@
-<p>This is the movie-delete view.</p>
+<form role="form">
+  <p>Are you sure you want to delete {{ movie.title }}?</p>
+  <div class="form-group">
+    <input type="submit" class="btn btn-danger" ng-click="deleteMovie()" value="Yes">
+    <button type="button" ng-click="back()" class="btn btn-default">No</button>
+  </div>
+</form>
