adds navigation view and create movie button

--- a/client/app/views/movies.html
+++ b/client/app/views/movies.html
@@ -1,3 +1,5 @@
+<a class="btn btn-primary" href="/#/create/movie"><span class="glyphicon glyphicon-plus"></span> Create Movie</a>
+<br>
 <table class="table table-striped">
   <thead>
     <th>Title</th>
