--- a/client/app/views/movies.html
+++ b/client/app/views/movies.html
@@ -4,11 +4,18 @@
   <thead>
     <th>Title</th>
     <th>URL</th>
+    <th>Operations</th>
   </thead>
   <tbody>
     <tr ng-repeat="movie in movies">
-      <td>{{ movie.title }}</td>
+      <td><a ng-href="/#/movie/{{ movie._id }}">{{ movie.title }}</a></td>
       <td>{{ movie.url }}</td>
+      <td>
+        <div class="button-group">
+          <a ng-href="/#/movie/{{ movie._id }}/edit" class="btn btn-default"><span class="glyphicon glyphicon-edit"></span></a>
+          <a ng-href="/#/movie/{{ movie._id }}/delete" class="btn btn-danger"><span class="glyphicon glyphicon-remove"></span></a>
+        </div>
+      </td>
     </tr>
   </tbody>
 </table>
